--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^4.12.1",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google": "^0.3.0",
